--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
                 </div>
                 <div class="panel-body">
 
+                    <div class="form-group">
+                        <input class="form-control" placeholder="Event name" v-model="event.name">
+                    </div>
+
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="Event description" v-model="event.description"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="date" class="form-control" placeholder="Date" v-model="event.date">
+                    </div>
+
+                    <button class="btn btn-primary" v-on="click: addEvent">Submit</button>
+
                 </div>
             </div>
         </div>
