--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <title>Vue</title>
@@ -42,7 +42,7 @@
                         <input type="date" class="form-control" placeholder="Date" v-model="event.date">
                     </div>
 
-                    <button class="btn btn-primary" v-on="click: addEvent">Submit</button>
+                    <button class="btn btn-primary" v-on:click="addEvent">Submit</button>
 
                 </div>
             </div>
@@ -52,6 +52,23 @@
         <div class="col-sm-6">
             <div class="list-group">
 
+                <a href="#" class="list-group-item" v-for="event in events">
+                    <h4 class="list-group-item-heading">
+                        <i class="glyphicon glyphicon-bullhorn"></i>
+                        {{ event.name }}
+                    </h4>
+
+                    <h5>
+                        <i class="glyphicon glyphicon-calendar" v-if="event.date"></i>
+                        {{ event.date }}
+                    </h5>
+
+                    <p class="list-group-item-text" v-if="event.description">
+                        {{ event.description }}
+                    </p>
+
+                    <button class="btn btn-xs btn-danger" v-on:click"deleteEvent($index)">Delete</button>
+                </a>
             </div>
         </div>
     </div>
