added feature to delete an event

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         {{ event.description }}
                     </p>
 
-                    <button class="btn btn-xs btn-danger" v-on:click"deleteEvent($index)">Delete</button>
+                    <button class="btn btn-xs btn-danger" v-on:click="deleteEvent($index)">Delete</button>
                 </a>
             </div>
         </div>
